# rust-scraper

./: Cargo.toml  result.json  scheme.json
src/: main.rs
