[package]
name = "rust-scraper"
version = "0.1.0"
authors = ["hppRC <hpp.ricecake@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.11.0"
reqwest = "0.10.0"
tokio = { version = "0.2", features = ["macros"] }
