[package]
name = "rust-scraper"
version = "0.1.0"
authors = ["hppRC <hpp.ricecake@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.11.0"
reqwest = "0.10.0"
tokio = { version = "0.2", features = ["macros"] }
async-std = "1.4.0"
serde_derive = "1.0.104"
serde = "1.0.104"
serde_json = "1.0.44"
regex = "1.3.1"
